--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style></style>
     <meta charset="UTF-8">
-    <title>Cars</title>
+    <title style="color:snow">Cars</title>
 </head>
 <body style="background-color: #35363a">
-<a href="cars">Cars</a>
+<a href="cars" style="color:snow" >Cars</a>
 </body>
 </html>
